@@ -306,6 +306,7 @@ Paolo Maggi
 Sulabh Mahajan
 Willian T. Mahan
 Jonathan Maltz
+Rok Mandeljc
 Tobias Markmann
 Kris Marsh
 Fidel Martinez
